# cookiecutter_poetry_django

./: README.md
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  settings.py  urls.py  wsgi.py
